--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.interactive-scape.tuio_client": "file:D:/TUIO_Unity/TuioUnityClient-main/TuioUnityClient-main",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.collab-proxy": "2.0.7",
